fixing the random navbar wrapping on smaller screens

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -255,6 +255,10 @@ code {
   z-index:1; */
 }
 
+.nav{
+    flex-direction: row;
+}
+
 ul#nav li {
     display: inline;
 }
